--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,19 @@
     font-family: 'EB Garamond', serif;
 }
 
-/*html {*/
-/*    background: linear-gradient(300deg, #f1f1f6, #aaaaad, #ffffff);*/
-/*    background-size: contain;*/
-/*    !*animation: gradient-animation 3s ease infinite;*!*/
-/*    height: 100vh;*/
-/*    color: #161B33;*/
-/*}*/
+html {
+    /*background: linear-gradient(300deg, #f1f1f6, #aaaaad, #ffffff);*/
+    /*background-size: contain;*/
+    /*!*animation: gradient-animation 3s ease infinite;*!*/
+    /*height: 100vh;*/
+    color: #161B33;
+}
 
 /* GENERAL */
 
 body {
     font-family: 'EB Garamond', serif;
-    background: linear-gradient(300deg, #f1f1f6, #aaaaad, #ffffff);
+    background: linear-gradient(600deg, #f1f1f6, #aaaaad, #ffffff);
 }
 
 html {
@@ -101,7 +101,7 @@ a:hover {
     width: 100%;
     height: 2px;
     background-color: black;
-    transition: all 0.3 ease-in-out;
+    /*transition: all 0.3 ease-in-out;*/
 }
 
 .menu-links {
@@ -112,7 +112,7 @@ a:hover {
     width: fit-content;
     max-height: 0;
     overflow: hidden;
-    transition: all 0.3 ease-in-out;
+    /*transition: all 0.3 ease-in-out;*/
 }
 
 .menu-links a {
@@ -122,7 +122,7 @@ a:hover {
     font-size: 1.5rem;
     color: black;
     text-decoration: none;
-    transition: all 0.3 ease-in-out;
+    /*transition: all 0.3 ease-in-out;*/
 }
 
 .menu-links li {
@@ -315,7 +315,7 @@ section {
     flex: 1;
     background: white;
     border-radius: 2rem;
-    border: rgb(53, 53, 53) 0.1rem solid;
+    //border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     text-align: center;
 }
@@ -410,9 +410,9 @@ article .icon {
     display: flex;
     justify-content: center;
     border-radius: 2rem;
-    border: rgb(53, 53, 53) 0.1rem solid;
+    /*border: rgb(53, 53, 53) 0.1rem solid;*/
     border-color: rgb(163, 163, 163);
-    background: (250, 250, 250);
+    background: rgb(250, 250, 250);
     margin: 2rem auto;
     padding: 0.5rem;
 }
